src/scss/pages/_global.scss
$ddpurple: #774DA2;

html {
  font-size: 18px;
  opacity: 1 !important;
  transition: opacity .3s ease-in;
}

body {
  font-family: $font-family-sans-serif;
  text-rendering: optimizeLegibility;
  -webkit-font-feature-settings: "kern" 1;

  -webkit-text-size-adjust: 100%;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;

  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-kerning: normal;
  -moz-font-feature-settings: "lnum" 1, "frac" 0, "liga" 1, "clig" 1, "ss03" 1, "ss06" 1;
  -moz-font-feature-settings: "lnum=1, frac=0, liga=1, clig=1, ss03=1, ss06=1";
  -ms-font-feature-settings: "lnum" 1, "frac" 0, "liga" 1, "clig" 1, "ss03" 1, "ss06" 1;
  -o-font-feature-settings: "lnum" 1, "frac" 0, "liga" 1, "clig" 1, "ss03" 1, "ss06" 1;
  -webkit-font-feature-settings: "lnum" 1, "frac" 0, "liga" 1, "clig" 1, "ss03" 1, "ss06" 1;
  font-feature-settings: "lnum" 1, "frac" 0, "liga" 1, "clig" 1, "ss03" 1, "ss06" 1;
  /** "ss01" 1 is for the alternate 'a' character */
  /** "ss05" 1 is for alternate 'y' character */
  font-weight: 200;
  word-wrap: break-word;
}

iframe {
  border: none;
}

.banner body {
  padding-top: 159px;
}

body {
  padding-top: 129px;
  //@include media-breakpoint-down(md)
  @media (max-width: 991px) {
    padding-top: 65px;
  }
}

.greyside {
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  .grey {
    &:before,
    &:after {
      content: "";
      position: absolute;
      margin-left: -2000px;
      left: 0;
      top: 0;
      right: 0;
      bottom: 0;
      background: #F8F8F8;
      z-index: -1;
      height: 100%;
    }
    &:after {
      background: #F2F2F2;
      height: 50px;
    }
  }
}

strong {
  font-weight: 600;
}

a {
  color: #000;
}

button:focus,
a:focus {
  outline: none !important;
}

.custom-select {
  width: 100%;
  background-color: #fff;
  color: $ddpurple;
  /*border-color: $ddpurple;*/
  border-color: $ddpurple;
  font-weight: 600;
  transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
  text-align: center;
  height: 50px;
  font-size: 1.25rem;
  line-height: 1.5;
  border-radius: 0.3rem;
  text-align-last: center;
  &:focus {
    border-color: $ddpurple;
    outline: none;
  }
}

// standard code highlighting
// todo: do we want all code blocks like this or just ones on api, move this
pre {
  display: block;
  padding: 10.5px 9.5px;
  margin: 0 0 10px;
  font-size: 14px;
  line-height: 1.428571429;
  color: #000000;
  background-color: #F2F2F2;
  border-radius: 2px;
  border: 1px solid #D6D6D6;
  font-family: $font-family-monospace;
  word-break: normal;
  word-wrap: normal;
  .api &{
    border: 1px solid transparent;
  }
  code {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    padding: 0;
    font-size: 14px;
    line-height: 27px;
    color: #555555;
    white-space: pre-wrap;
    background-color: transparent;
    border-radius: 0;
    border: none;
    font-family: $font-family-monospace;
  }
}

tbody {
  code {
    word-wrap: normal;
    word-break: normal;
  }
}

code {
  color: #555555;
  padding: 0;
  font-size: 14px;
  background-color: #F2F2F2;
  border-left: 5px solid #f8f8f8;
  border-right: 5px solid #f8f8f8;
  border-bottom: 2px solid #f8f8f8;
  border-radius: 4px;
  display: inline;
  white-space: normal;
  /*font-family: 'Source Code Pro', monospace;*/
  font-family: $font-family-monospace;
}

p {
  // todo: can i set this with a bootstrap variable?
  font-size: 18px;
  color: #4a4a4a;
  line-height: 27px;
}

h1 {
  line-height: 42px;
  padding-bottom: 15.5px;
  /*&~ p {
    padding-top:10px;
  }*/
}

h2 {
  padding-bottom: 3px;
  line-height: 36px;
/*  &~ p {
    padding-top:100px;
  }*/
}
h4{
  text-transform: uppercase;
  padding-top: 14px;
}

h5{
  color: $ddpurple;
  > a{
    color: $ddpurple !important;
  }
  padding-top: 14px;
}

.col-lg-7 {
  #pagetitle {
    margin-right: -30%;
  }
}

.main {
  z-index: 2;
  padding-left: 29px;
  padding-top: 29px;
  padding-bottom: 100px;
  h2 > a,
  h3 > a,
  h4 > a,
  h5 > a {
    color: #000;
    border-bottom: 1px solid transparent;
    &:hover {
      border-bottom: 1px solid #000;
    }
  }
  & > a,
  & > p > a,
  & > ol li a,
  & > ul li a {
    //text-decoration:underline;
    border-bottom: 1px solid $gray-300;
    &:hover {
      color: $ddpurple;
      border-color: $ddpurple;
    }
  }

  ul{
    list-style-type: none;
    -webkit-padding-start: 12px;
    ul {
      -webkit-padding-start: 20px;
    }
    li {
      &:before {
        content: "–";
        position: relative;
        margin-right: 10px;
        margin-left: -12px;
        float: left;
      }
      p {
        margin-bottom: 0;
        & + .highlight {
          margin-top: 10px;
        }
      }
    }
  }

  pre {
    margin: 0 0 24px 0;
  }
  p + .highlight {
    position: relative;
    margin-top: -0.8rem;
  }
  p + h1,
  p + h2,
  p + h3,
  p + h4,
  ol + h1,
  ol + h2,
  ol + h3,
  ol + h4,
  ul + h1,
  ul + h2,
  ul + h3,
  ul + h4,
  span + h1,
  span + h2,
  span + h3,
  span + h4,
  table + h1,
  table + h2,
  table + h3,
  table + h4 {
    padding-top: 14px;
  }

  h2 + h3 {
    padding-top: 14px;
  }

  ul, ol, p {
    font-size: 18px;
    color: #4a4a4a;
    line-height: 27px;
    -webkit-font-smoothing: subpixel-antialiased;
    -moz-osx-font-smoothing: auto;
  }
}

.sticky {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
}

#dropdownMenuLink {
  text-decoration: none !important;
}

.dropdown-item {
  text-decoration: none !important;
}

// datadog cards
.cards-dd {
  margin-top: 14px;
  .card {
    text-decoration: none;
    img {

    }
    &:hover {
      border-color: transparent;
      box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, .4);
      .hover {
        display: inline;
      }
      .static {
        display: none;
      }
      .card-title {
        color: $ddpurple;
      }
    }
    .hover {
      display: none;
    }
    .card-title {
      color: #000;
      padding-top: 6px;
    }
    .card-text {
      display: block;
      padding: 0 20px;
    }
  }
}

//content images
.shortcode-img img {
  border: 1px solid #d6d6d6;
}

// popup images
.pop {
  cursor: zoom-in;
}

#popupImageModal {
  .modal-dialog {
    max-width: none;
    -webkit-transform: translate(0, -50%);
    -o-transform: translate(0, -50%);
    transform: translate(0, -50%);
    top: 50%;
    margin: 0 auto;
  }
}

// expand images
.wide-parent {
  width: 130%;
  display: block;
  figure {
    position: relative;
    &:before {
      height: 26px;
      top: -26px;
      background-image: linear-gradient(-179deg, hsla(0, 0%, 100%, 0), #fff 77%);
      content: "";
      display: inline-block;
      width: 300px;
      position: absolute;
      right: 0;
      opacity: .85;
    }
    &:after {
      height: 26px;
      bottom: -26px;
      background-image: linear-gradient(1turn, hsla(0, 0%, 100%, 0), #fff 77%);
      content: "";
      display: inline-block;
      width: 300px;
      position: absolute;
      right: 0;
      opacity: .85;
    }
  }
}

// Tables
table, .table {
  width: 100%;
  max-width: 100%;
  margin-bottom: 20px;
  border: 1px solid #D6D6D6;
  font-size: 16px;
  a {
    border-bottom: 1px solid $gray-300;
    &:hover {
      border-bottom: 1px solid $ddpurple;
    }
  }
  &:before {
    height: 26px;
    top: -26px;
    background-image: linear-gradient(-179deg, hsla(0, 0%, 100%, 0), #fff 77%);
    content: "";
    display: none;
    width: 300px;
    position: absolute;
    right: 0;
    opacity: .85;
  }
  &:after {
    height: 26px;
    bottom: -26px;
    background-image: linear-gradient(1turn, hsla(0, 0%, 100%, 0), #fff 77%);
    content: "";
    display: none;
    width: 300px;
    position: absolute;
    right: 0;
    opacity: .85;
  }

  & > thead > tr > th {
    vertical-align: bottom;
    background: #e8e8e8;
    border: none;
    font-size: 14px;
    text-transform: uppercase;
    color: #000000;
  }
  & > thead > tr > th, & > tbody > tr > td {
    padding:.65rem;
    border-left: 1px solid #D6D6D6 !important;
  }
  tr:first-child td {
    border: none;
  }
  & > tbody tr:nth-child(2n) {
    background: #fafafa;
  }
}

// expand tables
.table-wide {
  width: 130%;
  background: #fff;
  position: relative;
  display: block;
  overflow-x: auto;
  overflow-y: hidden;
  table {
    display: table;
  }
}

// tables for integration metrics
.table-metrics {
  tr td {
    &:nth-child(1) {
      word-break: normal;
    }
    &:nth-child(1),
    &:nth-child(2) {
      width: 50%;
    }
  }
}

// external link logos

.link-logo {
  transform: translateY(-1px);
  margin-right: -1px;
}

// responsive tables
.table-responsive-container {
  position: relative;
  overflow: hidden;
  width: 100%;
  &:after {
    position: absolute;
    top: 0;
    left: 100%;
    width: 50px;
    height: 100%;
    border-radius: 10px 0 0 10px/50% 0 0 50%;
    box-shadow: -5px 0 10px rgba(0, 0, 0, .25);
    content: "";
    display: none;
  }
  .table-scroll {
    display: block;
    width: 100%;
    overflow-x: auto;
    -webkit-overflow-scrolling: touch;
    -ms-overflow-style: -ms-autohiding-scrollbar;
    margin-bottom: 31px;
  }
  table {
    display: table;
    margin-bottom: 0;
  }
}

// loader
.loader,
.loader:after {
  border-radius: 50%;
  width: 10em;
  height: 10em;
}

.loader {
  //margin: 60px auto;
  font-size: 10px;
  position: relative;
  text-indent: -9999em;
  border-top: 1.1em solid rgba(234, 234, 234, 0.5);
  border-right: 1.1em solid rgba(234, 234, 234, 0.5);
  border-bottom: 1.1em solid rgba(234, 234, 234, 0.5);
  border-left: 1.1em solid #ffffff;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-animation: load8 1.1s infinite linear;
  animation: load8 1.1s infinite linear;
}

@-webkit-keyframes load8 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes load8 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

// modal background
.modal-backdrop.show {
  opacity: 0.3;
}

// all external links show an icon
/*a {
  &:not([href*='localhost']):not([href*='datadoghq.com']):not([href*='datadog.com']):not( [href^='#'] ):not( [href^='/'] ):after {
    content: " (external)";
  }
}*/

// Breakpoint styles go here...

@media (min-width: 1200px) {
  .container {
    max-width: 1170px !important;
  }
}

//@include media-breakpoint-up(xs) { ... }
@media (max-width: 575px) {
  html {
    overflow-x: hidden;
  }
  .table-responsive-container {
    &:after {
      display: block;
    }
  }
  .navbar-brand {
    margin-right: 0;
  }
}

//@include media-breakpoint-up(sm) { ... }
@media (max-width: 767px) {
  table.table-vertical-mobile {
    td {
      display: block !important;
      width: 100% !important;
    }
  }
}

//@include media-breakpoint-up(md) { ... }
@media (max-width: 991px) {

  .banner body {
    padding-top: 95px;
  }

  .main {
    padding-left: 15px;
  }
  .col-lg-7 {
    #pagetitle {
      margin-right: 0 !important;
    }
  }
  .wide-parent {
    width: 100%;
  }
}

